all requirements are satisfied. TODO- add comments, handle exceptions, add constraints and improve visibility (maybe display the pictures, instead of their props)